feat: implement default development runner for user creation and enhance security with role-based access control